Fixed following notification styling from being off-centered.

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -104,12 +104,12 @@
   .FollowingNotification {
     position: absolute;
     top: -6px;
-    right: -10px;
+    right: -18px;
     background-color: var(--danger);
     color: white;
     border-radius: 50%;
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
